--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@
     display: flex;
     margin-top: 23px;
 }
-.equalizer-text{
+.et{
     margin-left: 250px;
     font-size: 16px;
     font-family:ibmplexsansReg;
