--- a/index.css
+++ b/index.css
@@ -286,9 +286,6 @@
         width: 200px;
         height: 400px;
     }
-    .footer{
-       
-    }
     .month{
         font-size: 20px;
         font-family:ibmplexsansReg;
@@ -328,7 +325,10 @@
         margin-top: 400px;
     }
     .et{
+        margin-top: 30px;
+        margin-bottom: 40px;
         margin-left: -30px;
+        width: 100%;
     }
 
 }
